// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateRangePicker date-range-picker-utils Gitt at renderCalendarIcon kalles Når den instansieres med onClick method og custom css class Så renderes ikonet riktig 1`] = `
<span>
  <svg
    aria-hidden="true"
    class="hnds-style-icon customClassName"
    data-analyticsid="icon"
    fill="black"
    height="36"
    role="img"
    style="min-width: 36px; min-height: 36px;"
    viewBox="0 0 48 48"
    width="36"
  >
    <path
      d="M32.86 22.986a.984.984 0 010 1.967.984.984 0 010-1.967zm0 3.03a2.049 2.049 0 002.046-2.047 2.049 2.049 0 00-2.046-2.046 2.049 2.049 0 00-2.046 2.046c0 1.13.918 2.047 2.046 2.047zm6.21-7.864H8.68v-6.194h3.846v1.161a2.243 2.243 0 002.241 2.241 2.243 2.243 0 002.241-2.24v-1.162H30.62v1.161a2.244 2.244 0 002.241 2.241 2.243 2.243 0 002.241-2.24v-1.162h3.97v6.194zM8.678 35.982H39.07v-16.53H8.678v16.53zm5.148-26.273c0-.518.422-.94.941-.94.52 0 .941.422.941.94v3.41a.942.942 0 01-1.882 0V9.71zm18.093 0c0-.518.422-.94.941-.94.52 0 .941.422.941.94v3.41a.942.942 0 01-1.882 0V9.71zm3.182.95v-.95a2.243 2.243 0 00-2.24-2.24 2.244 2.244 0 00-2.242 2.24v.95H17.01v-.95a2.243 2.243 0 00-2.242-2.24 2.243 2.243 0 00-2.24 2.24v.95H7.378V37.28h32.992V10.658h-5.27zm-8.157 16.167a.984.984 0 110 1.969.984.984 0 010-1.969zm0 3.03a2.049 2.049 0 002.047-2.047 2.049 2.049 0 00-2.047-2.046 2.049 2.049 0 00-2.046 2.046c0 1.13.918 2.047 2.046 2.047z"
      fill-rule="evenodd"
    />
  </svg>
</span>
`;

exports[`DateRangePicker date-range-picker-utils Gitt at renderChevronIcon kalles Når den instansieres med "next" direction og custom css class Så renderes ikonet riktig 1`] = `
<span
  class="DayPickerNavigation_rightButton__horizontalDefault customClassName"
  tabindex="0"
>
  <svg
    aria-hidden="true"
    class="hnds-style-icon "
    data-analyticsid="icon"
    fill="#126F87"
    height="36"
    role="img"
    style="min-width: 36px; min-height: 36px;"
    viewBox="0 0 48 48"
    width="36"
  >
    <path
      d="M19.171 32.951l1.409 1.42L31.031 24 20.58 13.63l-1.409 1.42 9.02 8.95z"
    />
  </svg>
</span>
`;

exports[`DateRangePicker date-range-picker-utils Gitt at renderChevronIcon kalles Når den instansieres med "prev" direction og custom css class Så renderes ikonet riktig 1`] = `
<span
  class="DayPickerNavigation_leftButton__horizontalDefault customClassName"
  tabindex="0"
>
  <svg
    aria-hidden="true"
    class="hnds-style-icon "
    data-analyticsid="icon"
    fill="#126F87"
    height="36"
    role="img"
    style="min-width: 36px; min-height: 36px;"
    viewBox="0 0 48 48"
    width="36"
  >
    <path
      d="M30.66 32.951l-1.409 1.42L18.8 24l10.451-10.37 1.409 1.42L21.64 24z"
    />
  </svg>
</span>
`;

exports[`DateRangePicker date-range-picker-utils Gitt at renderMonthHeader kalles Når den får datoen 20.10.2015 Så returnerer den en komponent med riktig className og nested dropdowns (som er allerede testet dypere over) 1`] = `
<div
  className="datepicker__month-year-selector"
>
  <select
    aria-label="Velg måned"
    className="datepicker__month-selector"
    onChange={[Function]}
    onKeyDown={[Function]}
    value={9}
  >
    <option
      value={0}
    >
      januar
    </option>
    <option
      value={1}
    >
      februar
    </option>
    <option
      value={2}
    >
      mars
    </option>
    <option
      value={3}
    >
      april
    </option>
    <option
      value={4}
    >
      mai
    </option>
    <option
      value={5}
    >
      juni
    </option>
    <option
      value={6}
    >
      juli
    </option>
    <option
      value={7}
    >
      august
    </option>
    <option
      value={8}
    >
      september
    </option>
    <option
      value={9}
    >
      oktober
    </option>
    <option
      value={10}
    >
      november
    </option>
    <option
      value={11}
    >
      desember
    </option>
  </select>
  <select
    aria-label="Velg år"
    className="datepicker__year-selector"
    onChange={[Function]}
    onKeyDown={[Function]}
    value={2015}
  >
    <option
      value={2010}
    >
      2010
    </option>
    <option
      value={2011}
    >
      2011
    </option>
    <option
      value={2012}
    >
      2012
    </option>
    <option
      value={2013}
    >
      2013
    </option>
    <option
      value={2014}
    >
      2014
    </option>
    <option
      value={2015}
    >
      2015
    </option>
    <option
      value={2016}
    >
      2016
    </option>
    <option
      value={2017}
    >
      2017
    </option>
    <option
      value={2018}
    >
      2018
    </option>
    <option
      value={2019}
    >
      2019
    </option>
    <option
      value={2020}
    >
      2020
    </option>
  </select>
</div>
`;

exports[`DateRangePicker date-range-picker-utils Gitt at renderMonthsPicker kalles Når den får en minDato som har lik måned som maxDato Så returnerer den visnign av bare den ene måneden - uten dropdown 1`] = `
<span
  className="datepicker__month-view"
>
  October
</span>
`;

exports[`DateRangePicker date-range-picker-utils Gitt at renderMonthsPicker kalles Når den får minDato i februar og MaxDato i november Så returnerer den en dropdown med riktig className 1`] = `
<select
  aria-label="Velg måned"
  className="datepicker__month-selector"
  onChange={[Function]}
  onKeyDown={[Function]}
  value={9}
>
  <option
    value={0}
  >
    January
  </option>
  <option
    value={1}
  >
    February
  </option>
  <option
    value={2}
  >
    March
  </option>
  <option
    value={3}
  >
    April
  </option>
  <option
    value={4}
  >
    May
  </option>
  <option
    value={5}
  >
    June
  </option>
  <option
    value={6}
  >
    July
  </option>
  <option
    value={7}
  >
    August
  </option>
  <option
    value={8}
  >
    September
  </option>
  <option
    value={9}
  >
    October
  </option>
  <option
    value={10}
  >
    November
  </option>
  <option
    value={11}
  >
    December
  </option>
</select>
`;

exports[`DateRangePicker date-range-picker-utils Gitt at renderYearsPicker kalles Når den får en minDato som har lik år som maxDato Så returnerer den visning av bare det ene året - uten dropdown 1`] = `
<span
  className="datepicker__year-view"
>
  2020
</span>
`;

exports[`DateRangePicker date-range-picker-utils Gitt at renderYearsPicker kalles Når den får minDato i 2010 og MaxDato i 2020 Så returnerer den en dropdown med riktig className 1`] = `
<select
  aria-label="Velg år"
  className="datepicker__year-selector"
  onChange={[Function]}
  onKeyDown={[Function]}
  value={2015}
>
  <option
    value={2010}
  >
    2010
  </option>
  <option
    value={2011}
  >
    2011
  </option>
  <option
    value={2012}
  >
    2012
  </option>
  <option
    value={2013}
  >
    2013
  </option>
  <option
    value={2014}
  >
    2014
  </option>
  <option
    value={2015}
  >
    2015
  </option>
  <option
    value={2016}
  >
    2016
  </option>
  <option
    value={2017}
  >
    2017
  </option>
  <option
    value={2018}
  >
    2018
  </option>
  <option
    value={2019}
  >
    2019
  </option>
  <option
    value={2020}
  >
    2020
  </option>
</select>
`;
